--- a/angular.json
+++ b/angular.json
@@ -52,6 +52,7 @@
               "outputHashing": "all"
             },
             "development": {
+              "inlineStyleLanguage": "scss",
               "buildOptimizer": false,
               "optimization": false,
               "vendorChunk": true,
