--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "jest --coverage"
   },
   "private": true,
   "dependencies": {
@@ -29,14 +29,20 @@
     "@angular/cli": "~15.0.4",
     "@angular/compiler-cli": "^15.0.0",
     "@types/jasmine": "~4.3.0",
+    "@types/jest": "^29.2.5",
+    "@types/node": "^18.11.18",
     "jasmine-core": "~4.5.0",
+    "jest": "^28.0.0",
+    "jest-preset-angular": "^12.2.3",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
+    "ng-mocks": "^14.5.2",
     "prettier": "^2.8.1",
     "prettier-plugin-organize-attributes": "^0.0.5",
+    "ts-node": "^10.9.1",
     "typescript": "~4.8.2"
   }
 }
