--- a/.prettierrc
+++ b/.prettierrc
@@ -4,5 +4,5 @@
   "trailingComma": "es5",
   "importOrderSeparation": true,
   "importOrderSortSpecifiers": true,
-  "importOrderParserPlugins": ["typescript", "classProperties", "decorators-legacy"]
+  "importOrderParserPlugins": ["typescript", "classProperties", "decorators-legacy"],
 }
