--- a/package.json
+++ b/package.json
@@ -6,7 +6,13 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "jest --coverage"
+    "test": "jest --coverage",
+    "lint": "npx npm-run-all -c 'lint:*'",
+    "lint:ts": "npx @angular/cli lint",
+    "lint:pretty": "npx prettier 'src/**/*.{ts,scss,js,json,yml,md,html}' --list-different",
+    "lint:scss": "stylelint 'src/**/*.scss'",
+    "find-deadcode": "ts-prune",
+    "fix:lint": "npx npm-run-all -c \"lint:ts --fix\" \"lint:scss --fix\" \"lint:pretty --write\""
   },
   "private": true,
   "dependencies": {
@@ -26,11 +32,19 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.1.6",
+    "@angular-eslint/builder": "15.2.1",
+    "@angular-eslint/eslint-plugin": "15.2.1",
+    "@angular-eslint/eslint-plugin-template": "15.2.1",
+    "@angular-eslint/schematics": "15.2.1",
+    "@angular-eslint/template-parser": "15.2.1",
     "@angular/cli": "~15.1.6",
     "@angular/compiler-cli": "^15.1.5",
     "@types/jasmine": "~4.3.0",
     "@types/jest": "^29.2.5",
     "@types/node": "^18.11.18",
+    "@typescript-eslint/eslint-plugin": "5.48.2",
+    "@typescript-eslint/parser": "5.48.2",
+    "eslint": "^8.33.0",
     "jasmine-core": "~4.5.0",
     "jest": "^28.0.0",
     "jest-preset-angular": "^12.2.3",
